--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
         <!-- Project Section -->
 
-        <!-- <div class="content-wrapper">
+        <div class="content-wrapper">
             <div class="portfolio-items-wrapper">
 
                 <div class="portfolio-item-wrapper">
@@ -88,7 +88,7 @@
                     </div>
                 </div>
             </div>
-        </div> -->
+        </div>
         <!--  My UX Skills section coded using CSS flex -->
         <section class="mySkills">
             <h1>My UX Skills</h1>
@@ -114,7 +114,7 @@
             </div>
         </section>
         <!-- My Projects -->
-        <section class="myWork">
+        <!-- <section class="myWork">
             <h1>My Work</h1>
             <div class="workGrid">
                 <div class="itemBar">
@@ -143,7 +143,7 @@
                 </div>
             </div>
             <button><h3>View All Projects</h3></button>
-        </section>
+        </section> -->
         <!-- Footer -->
         <footer>
             <ul>
@@ -161,7 +161,7 @@
     </div>
 </body>
 
-<!-- <script> 
+<script> 
     const portfolioItems = document.querySelectorAll('.portfolio-item-wrapper')
 
     portfolioItems.forEach(portfolioItem => {
@@ -175,6 +175,6 @@
 
         })
     })
-</script> -->
+</script>
 
 </html>
